Make PhyloTreeCreationModal tall to ensure content doesn't overflow.
Since the Wizard navigation is position fixed now, this is a little more important
because the navigation can overlap the page.

Also don't add extra padding-bottom to wizard page-wrapper if nav is hidden.

--- a/app/assets/src/styles/ui/containers/wizard.scss
+++ b/app/assets/src/styles/ui/containers/wizard.scss
@@ -29,7 +29,7 @@
     }
   }
 
-  &__page_wrapper {
+  &__page_wrapper.padding-bottom {
     // Leave space for the nav at the bottom.
     padding-bottom: 50px;
   }
